src/global/index.css
@import "./fonts.css";

*,
*::before,
*::after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  scroll-behavior: smooth;
}

:root {
  --dark-clr: #09090b;
  --light-clr: #fafafa;
  --border-light: #d2cfff37;
  --border-dark: #000000;
  --hover-dark: #0000001c;
  --hover-light: #ffffff1c;
  --border-radius: 0.5rem;
  --padding: 1.25rem;
  --gradient: conic-gradient(
    from 180deg at 50% 50%,
    #feda75,
    #fa7e1e,
    #d62976,
    #962fbf,
    #4f5bd5,
    #feda75
  );
}

body {
  background-color: var(--dark-clr);
  color: var(--light-clr);
  font-family: "Outfit", sans-serif;
  width: min(43.75rem, 100% - 2.5rem);
  margin-inline: auto;
}

main {
  display: flex;
  flex-direction: column;
  gap: var(--padding);
}

.op-7 {
  opacity: 0.7;
}

h3 {
  font-size: 1rem;
  text-align: start;
}

.wrapper {
  display: flex;
  flex-direction: column;
  gap: 0.625rem;
}

.wrapper h3 {
  transform: translateX(10px);
}

/* background */

.grid-overlay {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background-image: linear-gradient(
      to right,
      rgba(157, 0, 255, 0.18) 1px,
      transparent 1px
    ),
    linear-gradient(to bottom, rgba(79, 79, 79, 0.18) 1px, transparent 1px);
  background-size: 40px 40px;

  -webkit-mask-image: radial-gradient(
    ellipse 60% 50% at 50% 0%,
    #000000 70%,
    transparent 100%
  );
  mask-image: radial-gradient(
    ellipse 60% 50% at 50% 0%,
    #000000 70%,
    transparent 100%
  );
}

